--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -56,6 +56,8 @@ spec:
         - --random-delay=false
         - --random-error=false
         env:
+        - name: PODINFO_UI_MESSAGE
+          value: "First Commit to Flux. Making a change"
         - name: PODINFO_UI_COLOR
           value: "#34577c"
         livenessProbe:
