--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -57,7 +57,7 @@ spec:
         - --random-error=false
         env:
         - name: PODINFO_UI_MESSAGE
-          value: "First Commit to Flux. Making a change"
+          value: "Reverting the Previous Change to Flux."
         - name: PODINFO_UI_COLOR
           value: "#34577c"
         livenessProbe:
